--- a/public/about.html
+++ b/public/about.html
@@ -22,80 +22,74 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#f2f20d",
-                        "background-light": "#f8f8f5",
-                        "background-dark": "#181811",
+                        "primary": "#F2EA7E",
+                        "background-light": "#1a1a1a",
+                        "background-dark": "#0A0A0A",
                         "charcoal": "#121212",
                     },
                     fontFamily: {
                         "display": ["Plus Jakarta Sans", "sans-serif"]
                     },
-                    borderRadius: {
-                        "DEFAULT": "0.25rem",
-                        "lg": "0.5rem",
-                        "xl": "0.75rem",
-                        "full": "9999px"
-                    },
+                    borderRadius: {"DEFAULT": "0.125rem", "lg": "0.25rem", "xl": "0.5rem", "full": "9999px"},
                 },
             },
         }
     </script>
-    <style>
+    <style type="text/tailwindcss">
+        :root {
+            --primary-color: #F2EA7E;
+            --bg-dark: #0A0A0A;
+        }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; }
+        .glass-effect {
+            background: rgba(10, 10, 10, 0.85);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+        }
+        .text-bold-modern {
+            font-weight: 800;
+            letter-spacing: -0.02em;
+        }
+        .accent-glow {
+            box-shadow: 0 0 20px rgba(242, 234, 126, 0.2);
+        }
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-        }
-
-        body {
-            font-family: 'Plus Jakarta Sans', sans-serif;
         }
     </style>
 </head>
 
-<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white transition-colors duration-300">
-    <!-- Top Navigation Bar -->
-    <div class="flex flex-col">
-        <header
-            class="flex items-center justify-between whitespace-nowrap border-b border-solid border-slate-200 dark:border-[#393928] px-6 md:px-20 py-4 bg-background-light dark:bg-background-dark sticky top-0 z-50">
-            <div class="flex items-center gap-8">
-                <div class="flex items-center gap-3 text-slate-900 dark:text-white">
-                    <div class="size-6 text-primary">
-                        <svg fill="currentColor" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                            <path clip-rule="evenodd" d="M24 4H6V17.3333V30.6667H24V44H42V30.6667V17.3333H24V4Z"
-                                fill-rule="evenodd"></path>
-                        </svg>
-                    </div>
-                    <h2 class="text-xl font-extrabold leading-tight tracking-tight uppercase">LIQUIDO</h2>
+<body class="bg-background-dark text-white transition-colors duration-300">
+<header class="fixed top-0 w-full z-50 border-b border-white/5 glass-effect">
+<div class="max-w-[1440px] mx-auto px-6 lg:px-20 h-20 flex items-center justify-between">
+<div class="flex items-center gap-12">
+            <a href="index.html" class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity">
+                <div class="size-10 bg-primary rounded-sm flex items-center justify-center text-background-dark">
+                    <span class="material-symbols-outlined font-bold">water_drop</span>
                 </div>
-                <nav class="hidden md:flex items-center gap-8">
-                    <a class="text-sm font-semibold hover:text-primary transition-colors" href="index.html">Home</a>
-                    <a class="text-sm font-semibold hover:text-primary transition-colors"
-                        href="products.html">Catalog</a>
-                    <a class="text-sm font-semibold hover:text-primary transition-colors" href="brands.html">Brands</a>
-                    <a class="text-sm font-semibold text-primary" href="about.html">About Us</a>
-                    <a class="text-sm font-semibold hover:text-primary transition-colors"
-                        href="contact.html">Contact</a>
-                </nav>
-            </div>
-            <div class="flex flex-1 justify-end gap-6 items-center">
-                <label class="hidden lg:flex flex-col min-w-40 !h-10 max-w-64">
-                    <div
-                        class="flex w-full flex-1 items-stretch rounded-lg h-full overflow-hidden border border-slate-200 dark:border-none">
-                        <div
-                            class="text-slate-500 dark:text-[#baba9c] flex bg-slate-100 dark:bg-[#393928] items-center justify-center pl-4">
-                            <span class="material-symbols-outlined text-[20px]">search</span>
-                        </div>
-                        <input
-                            class="form-input flex w-full min-w-0 flex-1 border-none bg-slate-100 dark:bg-[#393928] focus:ring-0 h-full placeholder:text-slate-400 dark:placeholder:text-[#baba9c] px-4 pl-2 text-sm font-normal"
-                            placeholder="Search devices..." value="" />
-                    </div>
-                </label>
-                <button
-                    class="flex min-w-[100px] cursor-pointer items-center justify-center rounded-lg h-10 px-5 bg-primary text-black text-sm font-bold transition-transform hover:scale-105">
-                    <span>Shop Now</span>
-                </button>
-            </div>
-        </header>
-        <main class="flex-grow">
+                <h2 class="text-2xl text-bold-modern tracking-tighter uppercase">LIQUIDO <span class="text-primary/80 font-normal">VAPE SHOP</span></h2>
+            </a>
+<nav class="hidden md:flex items-center gap-8">
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Brands</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Products</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="about.html">About</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contact</a>
+</nav>
+</div>
+<div class="flex items-center gap-6">
+<div class="hidden lg:flex items-center bg-white/5 border border-white/10 rounded-sm px-4 py-2 w-64">
+<span class="material-symbols-outlined text-white/40 text-sm">search</span>
+<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Search products..." type="text"/>
+</div>
+<button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
+<span class="material-symbols-outlined text-lg">location_on</span>
+                Find a Store
+            </button>
+</div>
+</div>
+</header>
+<main class="pt-20">
             <!-- Hero Section -->
             <section class="relative">
                 <div class="flex min-h-[60vh] flex-col gap-6 bg-cover bg-fixed bg-center bg-no-repeat items-center justify-center p-8 text-center"
